Give the carousel-controls a z-index of 10 to make sure they do not hide behind the footer image.

--- a/orchard/src/Orchard.Web/Themes/Bootstrap/Styles/theme.css
+++ b/orchard/src/Orchard.Web/Themes/Bootstrap/Styles/theme.css
@@ -320,6 +320,7 @@ div.zone-after-main {
         top: 120px;
         color: #C7973A;
         border: 3px solid #C7973A;
+        z-index:10;
     }
 
         #myCarousel > .carousel-control.left {
